Fix T75290: Cycles crash with out of bounds memory access in volume mesh build